Fix z-index on popup
Bug: 61023

--- a/MwEmbedModules/EmbedPlayer/resources/skins/kskin/PlayerSkinKskin.css
+++ b/MwEmbedModules/EmbedPlayer/resources/skins/kskin/PlayerSkinKskin.css
@@ -7,6 +7,7 @@
 }
 .k-player .ui-widget-content {
 	color: #555;
+	z-index: 3;
 }
 .k-player .ui-widget-content a{
 	color: #555;
